# durodbms

./: .cproject  .hgignore  .hgtags  .project  .sconsign.dblite  INSTALL  README  SConstruct
docs/: howitworks.html  index.html  operators.html  style.css  templates.html
duro/: .cdtproject  .cproject  .cvsignore  .project  .sconsign  AUTHORS  CHANGES  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  README  README.windows  SConstruct  configure.ac  duro.def  duro.spec  duroprofile  durotcl.def  make.vars  scalar.test
duro/bdbrec/: bdbcursor.c  bdbcursor.h  bdbenv.c  bdbenv.h  bdbindex.c  bdbindex.h  bdbrecmap.c  bdbrecmap.h  bdbsequence.c  bdbsequence.h  bdbtx.c  bdbtx.h
duro/dli/: .cvsignore  duro.c  durodt.c  exlex.l  exparse.y  fcgi.c  fcgi.h  iinterp.c  iinterp.h  interp_assign.c  interp_assign.h  interp_core.c  interp_core.h  interp_eval.c  interp_eval.h  interp_stmt.c  interp_stmt.h  interp_vardef.c  interp_vardef.h  ioop.c  ioop.h  parse.c  parse.h  parsenode.c  parsenode.h  stmtser.c  stmtser.h  tabletostr.c  tabletostr.h  tst.td  varmap.c  varmap.h
duro/docs/: .cvsignore  api-spec.html  expressions.html  fastcgi.html  index.html  migration.html  relnotes.html  statements.html  style.css  utils.html
duro/docs/durodt/: tut.html
duro/docs/rest/: rest.html
duro/docs/tcl/: array.html  begin.html  call.html  commit.html  constraint.html  db.html  dberror.html  delete.html  env.html  errorCode.html  expr.html  index.html  indexcmd.html  insert.html  massign.html  operator.html  ptable.html  rollback.html  table.html  txdb.html  type.html  update.html
duro/fdbrec/: fdbcursor.c  fdbcursor.h  fdbenv.c  fdbenv.h  fdbindex.c  fdbindex.h  fdbrecmap.c  fdbrecmap.h  fdbsequence.c  fdbsequence.h  fdbtx.c  fdbtx.h
duro/jduro/: jduro.c  jduro.h  probj.c
duro/pgrec/: pgcursor.c  pgcursor.h  pgenv.c  pgenv.h  pgindex.c  pgindex.h  pgrecmap.c  pgrecmap.h  pgtx.c  pgtx.h
duro/rec/: Makefile  cursor.c  cursor.h  cursorimpl.h  dbdefs.h  env.c  env.h  envimpl.h  index.c  index.h  indeximpl.h  recmap.c  recmap.h  recmapimpl.h  sequence.c  sequence.h  sequenceimpl.h  tx.c  tx.h
duro/regex/: regex.cpp  regex.h
duro/rel/: Makefile  aggrf.c  array.c  arrayx.c  assign.c  builtinops.c  builtintypes.c  cat_op.c  cat_op.h  cat_stored.c  cat_stored.h  cat_type.c  cat_type.h  catalog.c  catalog.h  constraint.c  contains.c  database.c  delete.c  delete.h  evaluate.c  excontext.c  expression.c  expressionx.c  exprtype.c  getargs.c  insert.c  insert.h  internal.h  io.c  io.h  json.c  json.h  key.c  key.h  match.c  object.c  objectx.c  operator.c  opmap.c  (+38 more)
duro/srv/: durod.c
duro/tcl/: .sconsign  arraycmd.c  constrcmd.c  dbcmd.c  duro.c  duro.h  duroadmin.tcl  durodump.tcl  envcmd.c  exprcmd.c  indexcmd.c  insertcmd.c  massigncmd.c  opcmd.c  tablecmd.c  txcmd.c  typecmd.c  updatecmd.c  util.tcl
duro/td/: upgrade.td
duro/tests/: .cvsignore  Makefile  aggr.test  all.tcl  constraints.tcl  constraints.test  convert.tcl  convert.test  ctests  ctests.test  db2.tcl  db2.test  deedum.tcl  deedum.test  env.test  fdbclear  index.tcl  index.test  invtable.tcl  invtable.test  lstables.c  lstables_output  ltables.tcl  ltables.test  maptest.c  massign.tcl  massign.test  oindex.tcl  oindex.test  operator.tcl  operator.test  opt.tcl  opt.test  parse.tcl  parse.test  plus.c  plus.def  point.c  point.def  point.h  (+95 more)
duro/tests/durodt/: all.tcl  array.test  gentypes.test  inherit.test  io.test  loop.test  lrelation.test  module.test  package.test  prelation.test  relation.test  scalar.td  scalar.test  setup.tcl  tuple.test
duro/treerec/: field.c  field.h  tree.c  tree.h  treecursor.c  treecursor.h  treeindex.c  treeindex.h  treerecmap.c  treerecmap.h
duro/util/: .cvsignore  Makefile  dropdb.c  droptable.c  lstables.c  www.c  www.h
duro/util/.libs/: lstables  lt-lstables
examples/supp/sh/: setup.sh
examples/supp/td/: actions.td  config.td  db.td
examples/supp/views/: addsupp.thtml  askdelsupp.thtml  editsupp.thtml  listsupps.thtml  supp.thtml
examples/supp/www-static/: addsupp.html
jduro/: .classpath  .project
jduro/examples/: DExecute.java  RestClient.java  UserDefType.java
jduro/src/: net_sf_duro_DInstance.h
jduro/src/net/sf/duro/: ArrayType.java  ByteArray.java  DEvaluator.java  DException.java  DSession.java  DefaultPossrepObject.java  DuroDSession.java  DuroPossrepObject.java  LocalSession.java  NameTypePair.java  Possrep.java  PossrepInvocationHandler.java  PossrepObject.java  RelationType.java  ScalarType.java  SimplePossrepObject.java  Tuple.java  TupleType.java  Type.java  UpdatableBoolean.java  UpdatableDouble.java  UpdatableInteger.java  VarDef.java
jduro/src/net/sf/duro/rest/: RESTSession.java
jduro/tests/net/sf/duro/tests/: AllTests.java  TestDB.java  TestEvaluate.java  TestExecute.java  TestSetVar.java  TestTypeImpl.java  TestUserClass.java  TestUserDefOp.java  TestUserDefType.java
src/: dreisam.c  getaction.c  getaction.h  json.c  json.h  sreason.c  sreason.h  viewop.c  viewop.h
td/: setup.td  template.td
